--- a/mfscrm/crm/templates/crm/customer_list.html
+++ b/mfscrm/crm/templates/crm/customer_list.html
@@ -67,7 +67,7 @@
                            onclick="return confirm('Are you sure you want to delete?')"
                            class="btn btn-danger">Delete</a>
                     </td>
-                    <td><a href="{% url 'crm:summary_download' pk=customer.pk %}"
+                    <td><a href="{% url 'crm:summary' pk=customer.pk %}"
                            class="btn btn-primary">Summary</a>
 
                 </tr>
