--- a/mfscrm/crm/templates/crm/summary_pdf.html
+++ b/mfscrm/crm/templates/crm/summary_pdf.html
@@ -1,7 +1,8 @@
-{% extends 'crm/base.html' %}
+
+
+
 {% block content %}
-{% load mathfilters %}
-{% load humanize %}
+
 
 <div class="container">
     <div class="row">
@@ -20,25 +21,41 @@
     <h1 style="padding-left: 15Px">Customer Summary</h1>
 </div>
 
-<div class="row">
-            <a href="{% url 'crm:download_summary_pdf' pk=customer.pk %}" class="row"><span
-                    class="btn btn-primary">Download Detailed Report</span></a>
-</div>
 
     <div class="row">
-        <h2 style="padding-left: 15Px">Customer Total</h2>
+        <h2 style="padding-left: 15Px">Customer Detail</h2>
     </div>
     <div>
         <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
-                <th>Total of Service Charges and Product Charges</th>
+                <th>Customer Name</th>
+                <th>Organization</th>
+                <th>Role</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>Bldg-Room</th>
+                <th>Account</th>
+                <th>Address</th>
+                <th>City</th>
+                <th>State</th>
+                <th>Zip Code</th>
             </tr>
             </thead>
             <tbody>
 
                 <tr>
-                    <td>{{ sum_product_charge.charge__sum|addition:sum_service_charge.service_charge__sum|intcomma }}</td>
+                    <td>{{ customer.cust_name }}</td>
+                    <td>{{ customer.organization }}</td>
+                    <td>{{ customer.role }}</td>
+                    <td>{{ customer.email }}</td>
+                    <td>{{ customer.phone_number }}</td>
+                    <td>{{ customer.bldgroom }}</td>
+                    <td>{{ customer.account_number }}</td>
+                    <td>{{ customer.address }}</td>
+                    <td>{{ customer.city }}</td>
+                    <td>{{ customer.state }}</td>
+                    <td>{{ customer.zipcode }}</td>
                 </tr>
 
             </tbody>
@@ -71,7 +88,7 @@
                     <td>{{ service.location }}</td>
                     <td>{{ service.setup_time }}</td>
                     <td>{{ service.cleanup_time}}</td>
-                    <td>{{ service.service_charge|intcomma }}</td>
+                    <td>{{ service.service_charge }}</td>
                 </tr>
             {% endfor %}
             </tbody>
@@ -85,7 +102,7 @@
         </thead>
         <tbody>
             <tr>
-                <td>{{ sum_service_charge.service_charge__sum|intcomma }}</td>
+                <td>{{ sum_service_charge.service_charge__sum }}</td>
 
             </tr>
         </tbody>
@@ -112,9 +129,9 @@
                 <tr>
                     <td>{{ product.product }}</td>
                     <td>{{ product.p_description }}</td>
-                    <td>{{ product.quantity|intcomma }}</td>
+                    <td>{{ product.quantity }}</td>
                     <td>{{ product.pickup_time }}</td>
-                    <td>{{ product.charge|intcomma }}</td>
+                    <td>{{ product.charge }}</td>
                 </tr>
             {% endfor %}
             </tbody>
@@ -128,7 +145,7 @@
         </thead>
         <tbody>
             <tr>
-                <td>{{ sum_product_charge.charge__sum|intcomma }}</td>
+                <td>{{ sum_product_charge.charge__sum }}</td>
 
             </tr>
         </tbody>
