--- a/mfscrm/crm/templates/crm/base.html
+++ b/mfscrm/crm/templates/crm/base.html
@@ -83,7 +83,7 @@
                         </a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="{% url 'logout' %}"><i class="fa fa-btn fa-sign-out"></i>Logout</a></li>
-                            <li><a href="{% url 'password_change' %}">Change Password?</a></li>
+                            <li><a href="{% url 'crm:change_password' %}">Change Password?</a></li>
                         </ul>
                     </li>
                 {% else %}
