--- a/mfscrm/crm/templates/crm/summary_pdf.html
+++ b/mfscrm/crm/templates/crm/summary_pdf.html
@@ -1,7 +1,26 @@
 
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Detailed Summary Report</title>
+    <style type="text/css">
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        table, th, td {
+            text-align: center;
+            border: 1px solid black;
+            margin: 0;
+            padding: 15px;
+
+        }
+    </style>
+</head>
 
 
-{% block content %}
+<body>
 
 
 <div class="container">
@@ -25,14 +44,14 @@
     <div class="row">
         <h2 style="padding-left: 15Px">Customer Detail</h2>
     </div>
-    <div>
+    <div style="overflow-x:auto">
         <table class="table table-striped table-bordered table-hover">
             <thead>
             <tr class="bg-info">
                 <th>Customer Name</th>
                 <th>Organization</th>
                 <th>Role</th>
-                <th>Email</th>
+                <th colspan="2">Email</th>
                 <th>Phone</th>
                 <th>Bldg-Room</th>
                 <th>Account</th>
@@ -48,7 +67,7 @@
                     <td>{{ customer.cust_name }}</td>
                     <td>{{ customer.organization }}</td>
                     <td>{{ customer.role }}</td>
-                    <td>{{ customer.email }}</td>
+                    <td colspan="2">{{ customer.email }}</td>
                     <td>{{ customer.phone_number }}</td>
                     <td>{{ customer.bldgroom }}</td>
                     <td>{{ customer.account_number }}</td>
@@ -152,4 +171,5 @@
     </table>
 </div>
 
-{% endblock %}
+</body>
+</html>
