--- a/mfscrm/crm/templates/registration/password_change_done.html
+++ b/mfscrm/crm/templates/registration/password_change_done.html
@@ -1,4 +1,5 @@
-{% extends "crm/base.html" %}
+{% extends 'crm/base.html' %}
+{% extends staticfiles %}
 
 {% block title %}Password changed{% endblock %}
 
