--- a/mfscrm/crm/templates/registration/password_change_form.html
+++ b/mfscrm/crm/templates/registration/password_change_form.html
@@ -1,11 +1,12 @@
-{% extends "crm/base.html" %}
+{% extends 'crm/base.html' %}
+{% load staticfiles %}
 
 {% block title %}Change you password{% endblock %}
 
 {% block content %}
     <h1>Change you password</h1>
     <p>Use the form below to change your password.</p>
-    <form action="{% url 'password_change' %}" method="post">
+    <form action="{% url 'crm:change_password' %}" method="post">
         {{ form.as_p }}
         <p><input type="submit" value="Change"></p>
         {% csrf_token %}
